--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav class="navigation">
           <!-- LOGO -->
           <a href="./index.html" class="logo-web" lang="en"
-            >Web<span class="logo-studio">Studio</span></a
+            >Web<span class="logo-web__studio">Studio</span></a
           >
           <ul class="nav-list list">
             <li class="li-nav"><a href="./index.html" class="current nav-element">Студія</a></li>
