--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <!-- navigation -->
         <nav class="navigation">
           <!-- LOGO -->
-          <a href="./index.html" class="logo-web" lang="en"
-            >Web<span class="logo-web__studio">Studio</span></a
+          <a href="./index.html" class="logo" lang="en"
+            >Web<span class="logo__studio">Studio</span></a
           >
           <ul class="nav-list list">
             <li class="li-nav"><a href="./index.html" class="current nav-element">Студія</a></li>
@@ -337,8 +337,8 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-list">
-          <a href="/" class="footer-logo-web" lang="en"
-            >Web <span class="footer-logo-studio" lang="en">Studio</span></a
+          <a href="/" class="logo logo--footer" lang="en"
+            >Web <span class="logo__studio--inverse" lang="en">Studio</span></a
           >
           <address class="footer-addres">
             <ul class="list">
