--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
         <!-- navigation -->
         <nav class="navigation">
           <!-- LOGO -->
-          <a href="./index.html" class="logo-web" lang="en">Web<span class="logo-studio">Studio</span></a>
+          <a href="./index.html" class="logo" lang="en">Web<span class="logo__studio">Studio</span></a>
           <ul class="nav-list list">
             <li class="li-nav"><a href="./index.html" class="nav-element">Студія</a></li>
             <li class="li-nav">
