--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
     <!-- my styls -->
+    <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/styles.css" />
+    
   </head>
 
   <body>
