--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,7 @@
     />
     <!-- my styls -->
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
 
   <body>
