--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     />
     <!-- my styls -->
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/main.css" />    <link rel="stylesheet" href="./css/main.css" />
   </head>
 
   <body>
@@ -190,8 +190,8 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-list">
-          <a href="/" class="footer-logo-web" lang="en"
-            >Web <span class="footer-logo-studio" lang="en">Studio</span></a
+          <a href="/" class="logo logo--footer" lang="en"
+            >Web <span class="logo__studio--inverse" lang="en">Studio</span></a
           >
           <address class="footer-addres">
             <ul class="list">
