--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
   <body>
     <!-- HEADER-->
     <header>
-      <div class="container-head container">
+      <div class="container__head container">
         <!-- navigation -->
         <nav class="navigation">
           <!-- LOGO -->
           <a href="./index.html" class="logo" lang="en"
             >Web<span class="logo__studio">Studio</span></a
           >
-          <ul class="nav-list list">
-            <li class="li-nav"><a href="./index.html" class="current nav-element">Студія</a></li>
-            <li class="li-nav"><a href="./portfolio.html" class="nav-element">Портфоліо</a></li>
-            <li class="li-nav"><a href="#" class="nav-element">Контакти</a></li>
+          <ul class="navigation__list list">
+            <li class="navigation__li"><a href="./index.html" class="current nav-element">Студія</a></li>
+            <li class="navigation__li"><a href="./portfolio.html" class="nav-element">Портфоліо</a></li>
+            <li class="navigation__li"><a href="#" class="nav-element">Контакти</a></li>
           </ul>
         </nav>
         <!-- Contacts -->
