--- a/index.html
+++ b/index.html
@@ -33,24 +33,24 @@
             >Web<span class="logo__studio">Studio</span></a
           >
           <ul class="navigation__list list">
-            <li class="navigation__li"><a href="./index.html" class="current nav-element">Студія</a></li>
-            <li class="navigation__li"><a href="./portfolio.html" class="nav-element">Портфоліо</a></li>
-            <li class="navigation__li"><a href="#" class="nav-element">Контакти</a></li>
+            <li class="navigation__li"><a href="./index.html" class="current navigation__element">Студія</a></li>
+            <li class="navigation__li"><a href="./portfolio.html" class="navigation__element">Портфоліо</a></li>
+            <li class="navigation__li"><a href="#" class="navigation__element">Контакти</a></li>
           </ul>
         </nav>
         <!-- Contacts -->
         <ul class="contacts list">
-          <li class="li-contact">
-            <a href="mailto:info@devstudio.com" class="contact" lang="en">
-              <svg class="icon-maill" width="16" height="12">
+          <li class="contacts__li">
+            <a href="mailto:info@devstudio.com" class="contacts__contact" lang="en">
+              <svg class="contacts__icon-maill" width="16" height="12">
                 <use href="./images/icons.svg#icon-maill"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
-          <li class="li-contact">
-            <a href="tel:+380961111111" class="contact">
-              <svg class="icon-tell" width="10" height="16">
+          <li class="contacts__li">
+            <a href="tel:+380961111111" class="contacts__contact">
+              <svg class="contacts__icon-tell" width="10" height="16">
                 <use href="./images/icons.svg#icon-tell"></use>
               </svg>
               +38 096 111 11 11</a
