--- a/portfolio.html
+++ b/portfolio.html
@@ -24,31 +24,32 @@
   <body>
     <!-- HEADER-->
     <header class="head-border">
-      <div class="container-head container">
+      <div class="container__head container">
         <!-- navigation -->
         <nav class="navigation">
           <!-- LOGO -->
-          <a href="./index.html" class="logo" lang="en">Web<span class="logo__studio">Studio</span></a>
-          <ul class="nav-list list">
-            <li class="li-nav"><a href="./index.html" class="nav-element">Студія</a></li>
-            <li class="li-nav">
-              <a href="./portfolio.html" class="nav-element current">Портфоліо</a>
-            </li>
-            <li class="li-nav"><a href="#" class="nav-element">Контакти</a></li>
+          <a href="./index.html" class="logo" lang="en"
+            >Web<span class="logo__studio">Studio</span></a
+          >
+          <ul class="navigation__list list">
+            <li class="navigation__li"><a href="./index.html" class="navigation__element">Студія</a></li>
+            <li class="navigation__li"><a href="./portfolio.html" class="current navigation__element">Портфоліо</a></li>
+            <li class="navigation__li"><a href="#" class="navigation__element">Контакти</a></li>
           </ul>
         </nav>
         <!-- Contacts -->
         <ul class="contacts list">
-          <li class="li-contact">
-            <a href="mailto:info@devstudio.com" class="contact" lang="en"
-              ><svg class="icon-maill" width="16" height="12">
-                <use href="./images/icons.svg#icon-maill"></use></svg
-              >info@devstudio.com
+          <li class="contacts__li">
+            <a href="mailto:info@devstudio.com" class="contacts__contact" lang="en">
+              <svg class="contacts__icon-maill" width="16" height="12">
+                <use href="./images/icons.svg#icon-maill"></use>
+              </svg>
+              info@devstudio.com
             </a>
           </li>
-          <li class="li-contact">
-            <a href="tel:+380961111111" class="contact"
-              ><svg class="icon-tell" width="10" height="16">
+          <li class="contacts__li">
+            <a href="tel:+380961111111" class="contacts__contact">
+              <svg class="contacts__icon-tell" width="10" height="16">
                 <use href="./images/icons.svg#icon-tell"></use></svg
               >+38 096 111 11 11</a
             >
