--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <!-- Hero Section -->
       <section class="hero-section">
         <div class="container">
-          <h1 class="hero-heading">Ефективні рішення для вашого бізнесу</h1>
+          <h1 class="hero-section__heading">Ефективні рішення для вашого бізнесу</h1>
           <button data-modal-open class="button" type="button" id="data-modal-open">
             Замовити послугу
           </button>
