--- a/index.html
+++ b/index.html
@@ -65,79 +65,79 @@
       <section class="hero-section">
         <div class="container">
           <h1 class="hero-section__heading">Ефективні рішення для вашого бізнесу</h1>
-          <button data-modal-open class="button" type="button" id="data-modal-open">
+          <button data-modal-open class="hero-section__button" type="button" id="data-modal-open">
             Замовити послугу
           </button>
         </div>
       </section>
       <!-- Our features -->
-      <section class="section features-section">
+      <section class="section section__features">
         <div class="container">
           <h2 class="hidden">Наші переваги</h2>
           <ul class="features list">
-            <li class="feature-card">
-              <div class="bord-feature">
-                <svg class="icon-feature" height="70" width="70">
+            <li class="feature__card">
+              <div class="feature__card-wrapper">
+                <svg class="feature__icon" height="70" width="70">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="feature-list-heading">УВАГА ДО ДЕТАЛЕЙ</h3>
-              <p class="feature-list-description">
+              <h3 class="feature__card-heading">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="feature__card-description">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
-            <li class="feature-card">
-              <div class="bord-feature">
-                <svg class="icon-feature" height="70" width="70">
+            <li class="feature__card">
+              <div class="feature__card-wrapper">
+                <svg class="feature__icon" height="70" width="70">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="feature-list-heading">ПУНКТУАЛЬНІСТЬ</h3>
-              <p class="feature-list-description">
+              <h3 class="feature__card-heading">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="feature__card-description">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
-            <li class="feature-card">
-              <div class="bord-feature">
-                <svg class="icon-feature" height="70" width="70">
+            <li class="feature__card">
+              <div class="feature__card-wrapper">
+                <svg class="feature__icon" height="70" width="70">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="feature-list-heading">ПЛАНУВАННЯ</h3>
-              <p class="feature-list-description">
+              <h3 class="feature__card-heading">ПЛАНУВАННЯ</h3>
+              <p class="feature__card-description">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="feature-card">
-              <div class="bord-feature">
-                <svg class="icon-feature" height="70" width="70">
+            <li class="feature__card">
+              <div class="feature__card-wrapper">
+                <svg class="feature__icon" height="70" width="70">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="feature-list-heading">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-              <p class="feature-list-description">
+              <h3 class="feature__card-heading">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="feature__card-description">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
               </p>
             </li>
           </ul>
         </div>
       </section>
-      <!-- What do we do? -->
+      <!-- Our  work -->
       <section class="section">
         <div class="container">
-          <h2 class="what-heading">Чим ми займаємося</h2>
-          <ul class="what-list-other list">
-            <li class="what-card">
-              <img src="./images/desktop.jpg" alt="людина працює за пк" class="img-what" />
-              <p class="what-descriptions">Десктопні додатки</p>
+          <h2 class="title">Чим ми займаємося</h2>
+          <ul class="our-work list">
+            <li class="our-work__card">
+              <img src="./images/desktop.jpg" alt="людина працює за пк" class="our-work__img" />
+              <p class="our-work__descriptions">Десктопні додатки</p>
             </li>
-            <li class="what-card">
-              <img src="./images/laptop.jpg" alt="людина працює за ноутбуком" class="img-what" />
-              <p class="what-descriptions">Мобільні додатки</p>
+            <li class="our-work__card">
+              <img src="./images/laptop.jpg" alt="людина працює за ноутбуком" class="our-work__img" />
+              <p class="our-work__descriptions">Мобільні додатки</p>
             </li>
-            <li class="what-card">
-              <img src="./images/table.jpg" alt="людина працює за планшетом" class="img-what" />
-              <p class="what-descriptions">Дизайнерські рішення</p>
+            <li class="our-work__card">
+              <img src="./images/table.jpg" alt="людина працює за планшетом" class="our-work__img" />
+              <p class="our-work__descriptions">Дизайнерські рішення</p>
             </li>
           </ul>
         </div>
@@ -145,7 +145,7 @@
       <!-- Our Team -->
       <section class="our-team section">
         <div class="container">
-          <h2 class="our-team-heading">Наша команда</h2>
+          <h2 class="title">Наша команда</h2>
           <ul class="our-team-list list">
             <li class="team-card">
               <img src="./images/slaveone.jpg" alt="Ігор Дем'яненко" class="imag-team" />
@@ -285,7 +285,7 @@
       <!-- CLIENTS -->
       <section class="section">
         <div class="container">
-          <h2 class="header-clients">Постійні клієнти</h2>
+          <h2 class="title">Постійні клієнти</h2>
           <ul class="list clients-list">
             <li class="client">
               <a href="http://" class="link-client">
