--- a/index.html
+++ b/index.html
@@ -286,45 +286,45 @@
       <section class="section">
         <div class="container">
           <h2 class="title">Постійні клієнти</h2>
-          <ul class="list clients-list">
-            <li class="client">
-              <a href="http://" class="link-client">
-                <svg height="47" width="41" class="icon-client">
+          <ul class="list clients">
+            <li class="clients__card">
+              <a href="http://" class="clients__link">
+                <svg height="47" width="41" class="clients__icon">
                   <use href="./images/icons.svg#icon-group"></use>
                 </svg>
               </a>
             </li>
-            <li class="client">
-              <a href="http://" class="link-client">
-                <svg height="52" width="40" class="icon-client">
+            <li class="clients__card">
+              <a href="http://" class="clients__link">
+                <svg height="52" width="40" class="clients__icon">
                   <use href="./images/icons.svg#icon-group-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="client">
-              <a href="http://" class="link-client">
-                <svg height="42" width="43" class="icon-client">
+            <li class="clients__card">
+              <a href="http://" class="clients__link">
+                <svg height="42" width="43" class="clients__icon">
                   <use href="./images/icons.svg#icon-group-2"></use>
                 </svg>
               </a>
             </li>
-            <li class="client">
-              <a href="http://" class="link-client">
-                <svg height="41" width="84" class="icon-client">
+            <li class="clients__card">
+              <a href="http://" class="clients__link">
+                <svg height="41" width="84" class="clients__icon">
                   <use href="./images/icons.svg#icon-group-3"></use>
                 </svg>
               </a>
             </li>
-            <li class="client">
-              <a href="http://" class="link-client">
-                <svg height="45" width="63" class="icon-client">
+            <li class="clients__card">
+              <a href="http://" class="clients__link">
+                <svg height="45" width="63" class="clients__icon">
                   <use href="./images/icons.svg#icon-group-4"></use>
                 </svg>
               </a>
             </li>
-            <li class="client">
-              <a href="http://" class="link-client">
-                <svg height="45" width="94" class="icon-client">
+            <li class="clients__card">
+              <a href="http://" class="clients__link">
+                <svg height="45" width="94" class="clients__icon">
                   <use href="./images/icons.svg#icon-group-5"></use>
                 </svg>
               </a>
