--- a/index.html
+++ b/index.html
@@ -143,15 +143,15 @@
         </div>
       </section>
       <!-- Our Team -->
-      <section class="our-team section">
+      <section class=" section section__our-team">
         <div class="container">
           <h2 class="title">Наша команда</h2>
-          <ul class="our-team-list list">
-            <li class="team-card">
-              <img src="./images/slaveone.jpg" alt="Ігор Дем'яненко" class="imag-team" />
-              <div class="container-team">
-                <h3 class="team-name">Ігор Дем'яненко</h3>
-                <p lang="en" class="our-team-profession">Product Designer</p>
+          <ul class="our-team list">
+            <li class="our-team__card">
+              <img src="./images/slaveone.jpg" alt="Ігор Дем'яненко" class="our-team__imag" />
+              <div class="our-team__container">
+                <h3 class="our-team__name">Ігор Дем'яненко</h3>
+                <p lang="en" class="our-team__description">Product Designer</p>
                 <ul class="list social-list">
                   <li class="social-li">
                     <a href=""
@@ -180,11 +180,11 @@
                 </ul>
               </div>
             </li>
-            <li class="team-card">
-              <img src="./images/slavetwo.jpg" alt="Ольга Рєпіна" class="imag-team" />
-              <div class="container-team">
-                <h3 class="team-name">Ольга Рєпіна</h3>
-                <p lang="en" class="our-team-profession">Frontend Developer</p>
+            <li class="our-team__card">
+              <img src="./images/slavetwo.jpg" alt="Ольга Рєпіна" class="our-team__imag" />
+              <div class="our-team__container">
+                <h3 class="our-team__name">Ольга Рєпіна</h3>
+                <p lang="en" class="our-team__description">Frontend Developer</p>
                 <ul class="list social-list">
                   <li class="social-li">
                     <a href=""
@@ -213,11 +213,11 @@
                 </ul>
               </div>
             </li>
-            <li class="team-card">
-              <img src="./images/slavethree.jpg" alt="Микола Тарасов" class="imag-team" />
-              <div class="container-team">
-                <h3 class="team-name">Микола Тарасов</h3>
-                <p lang="en" class="our-team-profession">Marketing</p>
+            <li class="our-team__card">
+              <img src="./images/slavethree.jpg" alt="Микола Тарасов" class="our-team__imag" />
+              <div class="our-team__container">
+                <h3 class="our-team__name">Микола Тарасов</h3>
+                <p lang="en" class="our-team__description">Marketing</p>
                 <ul class="list social-list">
                   <li class="social-li">
                     <a href=""
@@ -246,11 +246,11 @@
                 </ul>
               </div>
             </li>
-            <li class="team-card">
-              <img src="./images/slavefour.jpg" alt="Михайло Єрмаков" class="imag-team" />
-              <div class="container-team">
-                <h3 class="team-name">Михайло Єрмаков</h3>
-                <p lang="en" class="our-team-profession">UI Designer</p>
+            <li class="our-team__card">
+              <img src="./images/slavefour.jpg" alt="Михайло Єрмаков" class="our-team__imag" />
+              <div class="our-team__container">
+                <h3 class="our-team__name">Михайло Єрмаков</h3>
+                <p lang="en" class="our-team__description">UI Designer</p>
                 <ul class="list social-list">
                   <li class="social-li">
                     <a href=""
