--- a/portfolio.html
+++ b/portfolio.html
@@ -214,44 +214,42 @@
           </address>
         </div>
         <div class="footer-social">
-          <h3>приєднуйтесь</h3>
-          <ul class="list social-list">
-            <li class="social-li">
-              <a href=""
-                ><svg class="icon-social" height="20" width="20">
+          <h3 class="footer-social__title" >приєднуйтесь</h3>
+          <ul class="list social-links-list">
+            <li class="social-links-list__item social-links-list__item--footer">
+              <a href="" class="social-links-list__link"
+                ><svg class="social-links-list__icon" height="20" width="20">
                   <use href="./images/icons.svg#icon-instagram"></use></svg
               ></a>
             </li>
-            <li class="social-li">
-              <a href=""
-                ><svg class="icon-social" height="20" width="20">
+            <li class="social-links-list__item social-links-list__item--footer">
+              <a href="" class="social-links-list__link"
+                ><svg class="social-links-list__icon" height="20" width="20">
                   <use href="./images/icons.svg#icon-twitter"></use></svg
               ></a>
             </li>
-            <li class="social-li">
-              <a href=""
-                ><svg class="icon-social" height="20" width="20">
+            <li class="social-links-list__item social-links-list__item--footer">
+              <a href="" class="social-links-list__link"
+                ><svg class="social-links-list__icon" height="20" width="20">
                   <use href="./images/icons.svg#icon-facebook"></use></svg
               ></a>
             </li>
-            <li class="social-li">
-              <a href=""
-                ><svg class="icon-social" height="20" width="20">
+            <li class="social-links-list__item social-links-list__item--footer">
+              <a href="./portfolio.html" class="social-links-list__link"
+                ><svg class="social-links-list__icon" height="20" width="20">
                   <use href="./images/icons.svg#icon-linkin"></use></svg
               ></a>
             </li>
           </ul>
         </div>
-        <!-- Subscription -->
-       
-         <form action="" class="subscription">
-          <strong>Підпишіться на розсилку</strong>
-          <div class="wraper-subscrip">
-            <input placeholder="E-mail" type="email" name="email" class="field-subscription" />
+        <form action="" class="footer-subscription">
+          <strong class="footer-social__title">Підпишіться на розсилку</strong>
+          <div class="footer-subscription__container">
+            <input placeholder="E-mail" type="email" name="email" class="footer-subscription__field" />
 
-            <button type="submit" class="submit-subscription">
-              Підписатися
-              <svg height="24" width="24" class="icon-field-subscription">
+            <button type="submit" class="footer-subscription__submit">
+               Підписатися
+               <svg height="24" width="24" class="footer-subscription__icon-submit">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
