--- a/portfolio.html
+++ b/portfolio.html
@@ -189,26 +189,26 @@
     <!-- FOOTER -->
     <footer class="footer">
       <div class="container">
-        <div class="footer-list">
+        <div class="footer-addres">
           <a href="/" class="logo logo--footer" lang="en"
             >Web <span class="logo__studio--inverse" lang="en">Studio</span></a
           >
-          <address class="footer-addres">
+          <address>
             <ul class="list">
-              <li class="adress-list">
+              <li class="footer-addres__item">
                 <a
                   href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
-                  class="adress-place link"
+                  class="footer-addres__place"
                   >м. Київ, пр-т Лесі Украінки, 26</a
                 >
               </li>
-              <li class="adress-list">
-                <a href="mailto:info@devstudio.com" class="adress" lang="en">info@devstudio.com </a>
+              <li class="footer-addres__item">
+                <a href="mailto:info@devstudio.com" class="footer-addres__contact" lang="en">info@devstudio.com </a>
               </li>
-              <li class="adress-list">
-                <a href="tel:+380961111111" class="adress">+38 096 111 11 11</a>
+              <li class="footer-addres__item">
+                <a href="tel:+380961111111" class="footer-addres__contact">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
