--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             >Web<span class="logo__studio">Studio</span></a
           >
           <ul class="navigation__list list">
-            <li class="navigation__li"><a href="./index.html" class="current navigation__element">Студія</a></li>
+            <li class="navigation__li"><a href="./index.html" class="navigation__current navigation__element">Студія</a></li>
             <li class="navigation__li"><a href="./portfolio.html" class="navigation__element">Портфоліо</a></li>
             <li class="navigation__li"><a href="#" class="navigation__element">Контакти</a></li>
           </ul>
