--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
           >
           <ul class="navigation__list list">
             <li class="navigation__li"><a href="./index.html" class="navigation__element">Студія</a></li>
-            <li class="navigation__li"><a href="./portfolio.html" class="current navigation__element">Портфоліо</a></li>
+            <li class="navigation__li"><a href="./portfolio.html" class="navigation__current navigation__element">Портфоліо</a></li>
             <li class="navigation__li"><a href="#" class="navigation__element">Контакти</a></li>
           </ul>
         </nav>
