--- a/portfolio.html
+++ b/portfolio.html
@@ -13,10 +13,10 @@
       rel="stylesheet"
     />
     <!-- Normalizator -->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-    />
+    /> -->
     <!-- my styls -->
      <link rel="stylesheet" href="./css/main.css" />
   </head>
